[workspace]
resolver = "3"
members = [
    "fabela_core",
    "fabela",
]

[workspace.dependencies]
rquickjs = { version = "0.9", features = ["parallel", "classes", "properties", "loader", "allocator"] }
zstd = "0.13"
tokio = { version = "1.43.0", features = ["full"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
miette = { version = "7.6.0", features = ["fancy"] }
thiserror = "2"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"

[profile.test]
opt-level = 3
